--- a/src/App.scss
+++ b/src/App.scss
@@ -20,3 +20,16 @@ body {
 .user-div:hover {
   background: rgb(120, 120, 120);
 }
+
+.messages-box {
+  height: 500px;
+  overflow-y: scroll;
+
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+
