--- a/src/App.scss
+++ b/src/App.scss
@@ -39,4 +39,12 @@ body {
   border-radius: 50%;
 }
 
+.message-input::placeholder {
+  color: rgba(0,0,0,0.5);
+}
 
+.info-text {
+  color: rgba(0,0,0,0.5);
+  text-align: center;
+  margin-bottom: 1rem;
+}
